Fixed color contrast

--- a/blocks/ratings/ratings.css
+++ b/blocks/ratings/ratings.css
@@ -53,7 +53,7 @@
     .quote em::before {
       content: "\201C";
       font-size: var(--heading-font-size-l);
-      color: var(--link-hover-color);
+      color: var(--accent-color);
       position: relative;
       left: -20px;
       height: 20px;
